Fixed bugs and background image not showing.

--- a/cmsc22_finalproj/src/application/application.css
+++ b/cmsc22_finalproj/src/application/application.css
@@ -1,6 +1,6 @@
-.root-border-pane {
-	-fx-background-image: url("src/images/background_welcomescreen.png");
-	-fx-background-size: cover;
-	-fx-background-repeat: no-repeat;
-	-fx-background-position: center;
+.border-pane {
+    -fx-background-image: url("images/background_welcomescreen.png");
+    -fx-background-size: cover;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
 }
